# evefrontier-cli

./: .gitignore  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  nx.json  package.json  pnpm-lock.yaml  project.json  workspace.json
.cache/audit/: evefrontier-lib.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-cross.yml
.husky/: pre-commit
crates/evefrontier-cli/: Cargo.toml  project.json
crates/evefrontier-cli/src/: main.rs
crates/evefrontier-lib/: Cargo.toml  project.json
crates/evefrontier-lib/src/: db.rs  github.rs  graph.rs  lib.rs  path.rs
docs/: OUTDATED.md  REBUILD.md  RECONSTRUCT.md  USAGE.md
docs/adrs/: 0007-devsecops-practices.md
examples/: list_tables.rs  print_schema.rs
instructions/: copilot-security-instructions.md
scripts/: run-precommit-nx.js
src/: db.rs  github.rs  graph.rs  main.rs  path.rs
