[package]
name = "evefrontier-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking", "gzip"] }
rusqlite = { version = "0.31", features = ["bundled"] }
indicatif = "0.17"
dirs = "5.0"
zip = "0.6"
petgraph = "0.6"
